# apva-framework

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  fly.toml  publish.sh  pyproject.toml  requirements.txt  verify_calculator.py
.github/workflows/: deploy.yml
apps/backend/: Dockerfile  __init__.py  alembic.ini  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py
apps/backend/apps/: __init__.py
apps/backend/apps/backend/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  worker.py
apps/backend/apps/backend/routers/: __init__.py  auth.py  eval.py  health.py  metrics.py  telemetry.py
apps/backend/apps/backend/services/: __init__.py  billing.py  clickhouse.py  eval.py  slm.py  streaming.py
apps/backend/scripts/: wait-for-it.sh
apps/backend/tests/: test_auth.py
apps/dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
apps/dashboard/src/: App.css  App.tsx
apps/edge-worker/src/: index.ts
apps/mock_target/: Dockerfile  __init__.py  app.py
apva/: __init__.py  calculator.py  cli.py  models.py
data/: golden_dataset.json
deploy/workers/: wrangler.toml
deploy/workers/src/: worker.js
docs/: introduction.mdx  mint.json  quickstart.mdx
scripts/: verify.sh
tests/: __init__.py  conftest.py  test_calculator.py  test_cli.py  test_ingestion.py  test_sdk.py  verify_calculator.py
