[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "apva-framework"
version = "2.1.0"
description = "AI Productivity & Value Architecture: local-first TVY benchmarking, telemetry, CLI, and SDK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.12.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.1,<1.0",
  "fastapi>=0.124.0,<1.0",
  "uvicorn[standard]>=0.38.0,<1.0",
  "pydantic-settings>=2.12.0,<3.0",
  "sqlalchemy[asyncio]>=2.0.45,<3.0",
  "aiosqlite>=0.21.0,<1.0",
  "celery[redis]>=5.6.0,<6.0",
  "redis>=7.1.0,<6.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apva*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-q"
